# income-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
notebooks/: income_analysis.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/income_kedro/: pipeline_registry.py
src/income_kedro/pipelines/income/: nodes.py  pipeline.py
src/tests/pipelines/income/: test_nodes.py
