[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

# =========================
# Project metadata (PEP 621)
# =========================
[project]
name = "income-kedro"
version = "0.1.0"
description = "Income prediction case using Kedro pipelines and machine learning"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Felipe Castro", email = "felmateos@alumni.usp.br" }
]

keywords = [
    "data-science",
    "machine-learning",
    "kedro",
    "classification",
    "income-prediction"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]

# =========================
# Runtime dependencies
# =========================
dependencies = [
    "kedro>=0.19.0",
    "kedro-datasets>=3.0",
    "pandas>=2.0",
    "scikit-learn>=1.3"
]


# =========================
# Optional dependencies
# =========================
[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.9",
    "isort>=5.12",
    "flake8>=6.1",
    "ipykernel>=6.25"
]

viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13"
]

catboost = [
    "catboost>=1.2"
]

# =========================
# Entry points (CLI)
# =========================
[project.scripts]
income-kedro = "income_kedro.__main__:main"

# =========================
# Tooling configuration
# =========================
[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

# =========================
# Kedro-specific settings
# =========================
[tool.kedro]
package_name = "income_kedro"
project_name = "Income kedro Case"
kedro_init_version = "1.1.1"
[tool.kedro_telemetry]
project_id = "137db23d859b42b18d09131c663ef46c"
